--- a/public/latest/assets/admin-css/ins-dashboard.css
+++ b/public/latest/assets/admin-css/ins-dashboard.css
@@ -104,8 +104,12 @@
   color: var(--neutral-color-neutral-80, #1C2636);
   font-size: 1rem;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 130%;
+}
+
+.my-courses-box .media h5 span{
+  font-weight: 600!important;
 }
 .my-courses-box .media p {
   color: var(--neutral-color-neutral-60, #66768E);
