--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -2172,8 +2172,16 @@
   border-color: #1E222A;
 }
 
-.welcome-back-box .progress{
+.dark-mode .welcome-back-box .progress{
   background-color: #313151!important;
+}
+
+.btn.btn-filter i{
+  color: #fff!important;
+}
+
+.dark-mode .liked-courses .dropdown .dropdown-menu li .dropdown-item:hover{
+  background-color: #000A39!important;
 }
 
 .dark-mode .course-box-overflown::-webkit-scrollbar-track ,
