--- a/public/latest/assets/homepage.css
+++ b/public/latest/assets/homepage.css
@@ -508,6 +508,8 @@ h6 {
   width: 100%;
   display: block;
   border-radius: 0.9rem 0.9rem 0 0;
+  height: 310px!important;
+  object-fit: cover!important;
 }
 .bundle-course-wrap .bundle-course-box .txt {
   padding: 1.2rem;
