--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -293,8 +293,14 @@
 }
 
 .dark-mode .package-list-header {
-  border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+  border-bottom: 1px solid #1A1A1A!important;
   background: #0D0D0D !important;
+}
+
+.dark-mode .header-area .d-flex .btn.avatar span.avatar-user{
+  background-color: #7289FF;
+  color: #000A39;
+  border-color: #0D0D0D;
 }
 
 .dark-mode .subscription-package-form {
@@ -1622,7 +1628,7 @@
 }
 
 .dark-mode .no-data-found {
-  border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+  /* border: 1px solid var(--others-dark-stroke, #1A1A1A) !important; */
   background: #0D0D0D !important;
   color: #fff !important;
   box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
@@ -2206,7 +2212,7 @@
   background-color: #313151 !important;
 }
 
-.btn.btn-filter i {
+.dark-mode .btn.btn-filter i {
   color: #fff !important;
 }
 
