--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1673,11 +1673,26 @@
   color: #fff;
 }
 
+
+
+.dark-mode .person-suggest-box-list .media:hover, 
+.dark-mode .person-tab-body .media:hover{
+  background-color: #000A39!important;
+}
+
 .dark-mode .add-object .btn-add,
 .dark-mode .submit-bttns-box .btn-submit,
 .dark-mode .submit-bttns-box .btn-cancel {
   border: 1px solid var(--others-dark-stroke, #66768E);
   background: #0D0D0D;
+}
+
+.dark-mode .submit-bttns-box .btn-submit{
+  border-color: #7289FF!important;
+}
+
+.dark-mode .submit-bttns-box .btn-cancel{
+  color: #667085!important;
 }
 
 .dark-mode .yearly-analitics {
@@ -1948,8 +1963,14 @@
   filter: invert(47%) sepia(75%) saturate(481%) hue-rotate(194deg) brightness(103%) contrast(101%) !important;
 }
 
+
 .dark-mode .course-outline-wrap .accordion .accordion-item .lesson-wrap a i {
-  color: #7289FF !important;
+  color: #A6B1C4 !important;
+}
+
+.dark-mode .course-outline-wrap .accordion .accordion-item .lesson-wrap a i.text-primary,
+.dark-mode .course-outline-wrap .accordion .accordion-item .lesson-wrap a.active i{
+  color: #7289FF!important;
 }
 
 .dark-mode .app-modals .custom-modal-content {
@@ -2220,18 +2241,21 @@
   background-color: #000A39 !important;
 }
 
+.dark-mode .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-inner-room::-webkit-scrollbar-track,
 .dark-mode .course-box-overflown::-webkit-scrollbar-track,
 .dark-mode .user-list-boxxs::-webkit-scrollbar-track,
 .dark-mode .custom-scrl::-webkit-scrollbar-track {
   background: #2D343E;
 }
 
+.dark-mode .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-inner-room::-webkit-scrollbar-thumb,
 .dark-mode .course-box-overflown::-webkit-scrollbar-thumb,
 .dark-mode .user-list-boxxs::-webkit-scrollbar-thumb,
 .dark-mode .custom-scrl::-webkit-scrollbar-thumb {
   background: #7289FF;
 }
 
+.dark-mode .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-inner-room::-webkit-scrollbar-thumb:hover,
 .dark-mode .course-box-overflown::-webkit-scrollbar-thumb:hover,
 .dark-mode .user-list-boxxs::-webkit-scrollbar-thumb:hover,
 .dark-mode .custom-scrl::-webkit-scrollbar-thumb:hover {
