--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1707,9 +1707,9 @@
 }
 
 .dark-mode .yearly-analitics button {
-  border-radius: 0.5rem;
-  border: 1px solid var(--others-dark-mode-btn, #7289FF);
-  background: #0D0D0D;
+  border-radius: 0.5rem!important;
+  border: 1px solid var(--others-dark-mode-btn, #7289FF)!important;
+  background: #0D0D0D!important;
   color: #7289FF !important;
 }
 
