--- a/public/latest/assets/admin-css/style.css
+++ b/public/latest/assets/admin-css/style.css
@@ -300,6 +300,21 @@ body {
   margin-top: 0.5rem;
 }
 
+span.user-name-avatar{
+  border-radius: 6.25rem;
+  border: 2px solid var(--neutral-10, #FFF);
+  width: 2.5rem;
+  height: 2.5rem;
+  -o-object-fit: cover;
+  object-fit: cover;
+  font-size: 1rem;
+  background-color: #E0E0E0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #294CFF;
+}
+
 .fl-main-container .fl-container.fl-flasher.fl-success:not(.fl-rtl) {
   border-color: #294CFF !important;
 }
