--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -2001,7 +2001,7 @@
   background-color: #000 !important;
 }
 
-.bootstrap-tagsinput input {
+.dark-mode .bootstrap-tagsinput input {
   color: #fff;
 }
 
