latest course thumabnail

--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -2005,6 +2005,10 @@
   color: #fff;
 }
 
+.dark-mode #close-button{
+  background-color: #ED5763!important;
+}
+
 .dark-mode .app-modals .custom-modal-content .form-group .form-control {
   color: #fff;
   border-color: #101C2D;
@@ -2552,4 +2556,9 @@ body.dark-mode .dark-mode-bttn label:last-child i {
 
 .dark-mode .content-settings-form-wrap hr{
   background-color: #1E222A!important;
+}
+
+.dark-mode .visibility-form-wrap .form-group .form-control option{
+  background-color: #0d0d0d!important;
+  color: #fff!important;
 }
