latest issue fixed

--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1123,7 +1123,7 @@
 }
 
 .dark-mode .content-settings-form-wrap label {
-  background-color: #000 !important;
+  background-color: #0D0D0D !important;
 }
 
 .dark-mode .course-overview-right-part .course-main-thumb .enrol-bttn.btn-share img {
