--- a/public/latest/assets/admin-css/style.css
+++ b/public/latest/assets/admin-css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;700;900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -130,9 +131,11 @@ body {
   justify-content: center;
   transition: all linear 0.3s;
 }
+
 .common-bttn i {
   margin-right: 0.5rem;
 }
+
 .common-bttn:hover {
   background-color: #121212;
   color: #fff;
@@ -151,9 +154,11 @@ body {
   border-radius: 3.125rem;
   transition: all linear 0.3s;
 }
+
 .paggination-wrap .pagination .page-item .page-link:hover {
   background: var(--action-light-selected, rgba(145, 158, 171, 0.16));
 }
+
 .paggination-wrap .pagination .page-item.active .page-link {
   background: var(--action-light-selected, rgba(145, 158, 171, 0.16)) !important;
 }
@@ -161,6 +166,7 @@ body {
 .form-submit-bttns {
   text-align: right;
 }
+
 .form-submit-bttns .btn-cancel {
   border-radius: 0.5rem;
   border: 1px solid var(--neutral-color-neutral-40, #C5CCD8);
@@ -175,9 +181,11 @@ body {
   height: 3rem;
   transition: all linear 0.3s;
 }
+
 .form-submit-bttns .btn-cancel:hover {
   background-color: #C5CCD8;
 }
+
 .form-submit-bttns .btn-submit {
   border-radius: 0.5rem;
   border-radius: 0.5rem;
@@ -194,6 +202,7 @@ body {
   transition: all linear 0.3s;
   margin-left: 1rem;
 }
+
 .form-submit-bttns .btn-submit:hover {
   background-color: #252525;
 }
@@ -220,6 +229,7 @@ body {
 .filter-dropdown-box {
   position: relative;
 }
+
 .filter-dropdown-box .dropdown .btn {
   display: block;
   width: 100%;
@@ -239,9 +249,11 @@ body {
   line-height: 140%;
   letter-spacing: 0.00413rem;
 }
+
 .filter-dropdown-box .dropdown .btn:focus {
   border: 1px solid rgba(145, 158, 171, 0.32) !important;
 }
+
 .filter-dropdown-box .dropdown .dropdown-menu {
   border-radius: 0.375rem;
   background: var(--background-light-paper, #FFF);
@@ -251,6 +263,7 @@ body {
   transform: translate3d(0px, 49px, 0px) !important;
   padding: 0.5rem !important;
 }
+
 .filter-dropdown-box .dropdown .dropdown-menu li .dropdown-item {
   overflow: hidden;
   color: var(--neutral-color-neutral-90, #101C2D);
@@ -264,12 +277,15 @@ body {
   margin-top: 0.25rem;
   border-radius: 0.375rem;
 }
+
 .filter-dropdown-box .dropdown .dropdown-menu li .dropdown-item:hover {
   background: var(--neutral-color-neutral-20, #F1F4F9);
 }
+
 .filter-dropdown-box .dropdown .dropdown-menu li:first-child .dropdown-item {
   margin-top: 0 !important;
 }
+
 .filter-dropdown-box i {
   color: #637381 !important;
   position: absolute;
@@ -287,10 +303,12 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+
 .no-data-found i {
   color: #294CFF;
   font-size: 2rem;
 }
+
 .no-data-found p {
   font-size: 1rem;
   font-style: normal;
@@ -300,7 +318,7 @@ body {
   margin-top: 0.5rem;
 }
 
-span.user-name-avatar{
+span.user-name-avatar {
   border-radius: 6.25rem;
   border: 2px solid var(--neutral-10, #FFF);
   width: 2.5rem;
@@ -330,12 +348,13 @@ span.user-name-avatar{
 .fl-main-container .fl-container.fl-success .fl-progress-bar {
   background-color: rgba(41, 77, 255, 0.553) !important;
 }
+
 .fl-main-container .fl-container.fl-success .fl-progress-bar .fl-progress {
   background-color: #294CFF !important;
 }
 
-input:visited{
-  background-color: #000!important;
+input:visited {
+  background-color: #000 !important;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
@@ -345,21 +364,65 @@ input:visited{
 }
 
 .form-control:-webkit-autofill,
-.form-control:-webkit-autofill:hover, 
-.form-control:-webkit-autofill:focus, 
-.form-control:-webkit-autofill:active{
-    -webkit-background-clip: text!important;
-    -webkit-text-fill-color: #000!important;
-    transition: background-color 5000s ease-in-out 0s!important; 
+.form-control:-webkit-autofill:hover,
+.form-control:-webkit-autofill:focus,
+.form-control:-webkit-autofill:active {
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: #000 !important;
+  transition: background-color 5000s ease-in-out 0s !important;
 }
 
-.student-courses-lists-pages .course-progress-bar .progress .progress-bar.course-gren-bg{
+.student-courses-lists-pages .course-progress-bar .progress .progress-bar.course-gren-bg {
   background-color: #32BCA3;
 }
-.student-courses-lists-pages .course-progress-bar .d-flex h6.course-gren-colr{
+
+.student-courses-lists-pages .course-progress-bar .d-flex h6.course-gren-colr {
   color: #32BCA3;
 }
 
-.course-single-item .course-txt-box ul li i.not-rev{
-  color: rgba(166, 177, 196, 0.48)!important;
+.course-single-item .course-txt-box ul li i.not-rev {
+  color: rgba(166, 177, 196, 0.48) !important;
+}
+
+.error-page-txt {
+  text-align: center;
+}
+
+.error-page-txt h1 {
+  color: var(--Gray-900, #101828);
+  text-align: center;
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 4.5rem;
+  letter-spacing: -0.075rem;
+  margin: 1rem 0;
+}
+
+.error-page-txt p {
+  color: var(--colors-text-text-tertiary-600, #475467);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 2rem;
+  margin-bottom: 2rem;
+}
+
+.error-page-txt a {
+  border-radius: var(--radius-md, 0.5rem);
+  background: #3D5CFF;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  color: var(--Component-colors-Components-Buttons-Primary-button-primary-fg, #FFF);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75rem; 
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: var(--spacing-xl, 1rem) 1.375rem;
+}
+
+.error-page-txt a i{
+  margin-left: 0.5rem;
 }
