--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -357,7 +357,7 @@
   background: #0D0D0D !important;
 }
 
-.dark-mode .download-files-box .files a {
+.dark-mode .download-files-box .files a, .dark-mode .files a {
   border: 1px solid var(--neutral-color-neutral-70, #2F3A4C) !important;
   background: #171717 !important;
   color: #7289FF !important;
