--- a/public/latest/assets/admin-css/style.css
+++ b/public/latest/assets/admin-css/style.css
@@ -447,3 +447,17 @@ input:visited {
         position: inherit;
     }
 }
+
+.note-editor.note-frame{
+    border-radius: 10px
+}
+
+.note-editor.note-frame .panel-heading.note-toolbar{
+    padding: 0 0 0px 5px;
+    border-bottom: 1px solid #fff;
+    box-shadow: 0 1px 16px #e1e1e1;
+}
+
+.note-editor.note-frame .note-editable p{
+    margin-top: 15px;
+}
