Summer note style done

--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -2616,7 +2616,7 @@ body.dark-mode .dark-mode-bttn label:last-child i {
 
 .dark-mode .note-editor.note-frame .panel-heading.note-toolbar {
     padding: 0 0 0px 5px;
-    border-bottom: 1px solid #2a3644;
+    border-bottom: 1px solid #47576b;
     box-shadow: 0 1px 16px #151c25;
   }
 
