--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -2606,7 +2606,7 @@ body.dark-mode .dark-mode-bttn label:last-child i {
 }
 
 /* Summernote css for dark mode */
-.dark-mode .note-editor.note-frame{
+/* .dark-mode .note-editor.note-frame{
     background-color: #222f3e;
     color: #fff;
 }
@@ -2618,5 +2618,5 @@ body.dark-mode .dark-mode-bttn label:last-child i {
     padding: 0 0 0px 5px;
     border-bottom: 1px solid #47576b;
     box-shadow: 0 1px 16px #151c25;
-  }
+} */
 
